Fixup for the searching sidebar scrollbar reappearing

--- a/apps/web/src/app/searching/searching.component.sass
+++ b/apps/web/src/app/searching/searching.component.sass
@@ -34,3 +34,7 @@
         position: absolute
         top: 0px
         right: 2px
+
+mat-sidenav
+    ::ng-deep & > .mat-drawer-inner-container
+        overflow-y: hidden !important
